--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,14 @@ subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
-    project.evaluationDependsOn(':app')
+    project.configurations.all {
+	resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.core' &&
+	       !details.requested.name.contains('androidx')) {
+		details.useVersion "1.0.0"
+            }
+	}
+    }    
 }
 
 task clean(type: Delete) {
