--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
@@ -17,8 +18,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
-}
+    configurations.all {
+           resolutionStrategy.force "androidx.fragment:fragment:1.1.0"
+        }
+        }
 
 rootProject.buildDir = '../build'
 subprojects {
