--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,14 +26,14 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+4
+  cloud_firestore: ^0.13.0+1
   image_picker: ^0.6.1+4
-  cached_network_image: ^1.1.1
+  cached_network_image: ^2.0.0-rc
   firebase_storage: ^3.0.6
   flutter_image_compress: ^0.6.3
   path_provider: ^1.2.0
   uuid: ^2.0.2
-  provider: ^3.1.0+1
+  provider: ^4.0.0
   image_cropper: ^1.1.0
   
 
